@@ -527,7 +527,7 @@ class CPie extends CGraphDraw{
 	}
 
 	public function draw(){
-		$start_time=getmicrotime();
+		$start_time = microtime(true);
 		set_image_header();
 
 		$this->selectData();
@@ -613,8 +613,10 @@ class CPie extends CGraphDraw{
 		$this->drawLogo();
 		if($this->drawLegend == 1)	$this->drawLegend();
 
-		$str=sprintf('%0.2f',(getmicrotime()-$start_time));
-		imagestring($this->im, 0,$this->fullSizeX-210,$this->fullSizeY-12, _s('Data from %1$s. Generated in %2$s sec', $this->dataFrom, $str), $this->getColor('Gray'));
+		$str = sprintf('%0.2f', microtime(true) - $start_time);
+		$str = _s('Data from %1$s. Generated in %2$s sec', $this->dataFrom, $str);
+		$strSize = imageTextSize(6, 0, $str);
+		imageText($this->im, 6, 0, $this->fullSizeX - $strSize['width'] - 5, $this->fullSizeY - 5, $this->getColor('Gray'), $str);
 
 		unset($this->items, $this->data);
 
